# desbot

./: .gitignore  MANUAL.md  README.md  desbot.cabal  desbot.yaml  icebot.cabal  stack.yaml
config/: config.sample.yaml  desbot-sample.yaml  desbot.conf  desbot.yaml.sample
desbot-old/: .gitignore  Bot.hs  MANUAL.md  REPL.hs  config-default.yaml  desbot.cabal  desbot.hs
exe/: desbot-repl.hs  desbot.hs
lib/Network/IRC/: Desbot.hs  Icebot.hs
lib/Network/IRC/Desbot/: Config.hs  Parser.hs  REPL.hs
res/: DesbotFuns.hs  config-default.yaml  config-example.yaml  config.sample.yaml  desbot.conf
skel/: Skel.hs
src/: Desbot.hs  Main.hs
