name:                desbot
version:             0.1.0.0
synopsis:            Modern bot for the #snowdrift channel on FreeNode.
description:         
  This is a bot intended to replace snowbot. Snowbot is very poorly written, to
  the point that it's easier to write an entire new bot.
homepage:            https://github.com/pharpend/desbot
bug-reports:         https://github.com/pharpend/desbot/issues
license:             AGPL-3
license-file:        LICENSE
author:              Peter Harpending
maintainer:          peter@harpending.org
copyright:           Copyright (c) 2015, Peter Harpending
category:            Network
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  
  LICENSE
  README.md
  res/config-example.yaml
data-files:  
  res/config-example.yaml

source-repository head
  type:                git
  location:            git://github.com/pharpend/desbot.git

source-repository this
  type:                git
  location:            git://github.com/pharpend/desbot.git
  tag:                 0.1.0.0

library
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind
  other-extensions:
    LambdaCase
    OverloadedStrings
  build-depends:
      attoparsec
    , base ==4.8.*
    , directory
    , exceptional >=0.1.5
    , network
    , readline
    , text
    , yaml
  exposed-modules:
    Network.IRC.Desbot
    Network.IRC.Desbot.Config
    Network.IRC.Desbot.Parser
    Network.IRC.Desbot.REPL
  
executable desbot
  main-is:             Main.hs
  other-modules:       
    Paths_desbot
  other-extensions:    
    OverloadedStrings
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:
    -Wall -threaded -fno-warn-unused-do-bind
  build-depends:
      base ==4.8.*
    , bytestring
    , directory
    , desbot
    , optparse-applicative
    , text
