name:                desbot
version:             0.1.0.0
synopsis:            Haskell evaluation IRC bot
description:
  A more sane Haskell evaluation IRC bot.
homepage:            https://github.com/pharpend/desbot
bug-reports:         https://github.com/pharpend/desbot/issues
license:             BSD3
license-file:        LICENSE
author:              Peter Harpending
maintainer:          peter@harpending.org
copyright:           Copyright (c) 2016, Peter Harpending
category:            Network
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  LICENSE
  README.md

source-repository head
  type:                git
  location:            https://github.com/pharpend/desbot.git

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
    DeriveGeneric
    FlexibleInstances
    FunctionalDependencies
    MultiParamTypeClasses
    OverloadedStrings
    TemplateHaskell
  other-modules:
    Paths_desbot
  build-depends:
      base ==4.8.*
    , aeson >=0.10.0.0
    , irc-client
    , lens
    , optparse-simple
    , text
    , yaml
  exposed-modules:
    Desbot

executable desbot
  hs-source-dirs:      bin
  default-language:    Haskell2010
  main-is:             Main.hs
  build-depends:
      base ==4.8.*
    , desbot

test-suite spec
  hs-source-dirs:      spec
  default-language:    Haskell2010
  main-is:             Spec.hs
  type:                exitcode-stdio-1.0
  build-depends:
      base ==4.8.*
    , desbot
    , hspec
